Thu Dec 11 15:32:00 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/idl2jni/codegen/im_jni.cpp:
        * java/idl2jni/runtime/idl2jni_BaseJavaPeer.h:
        * java/idl2jni/runtime/idl2jni_runtime.h:
        * java/idl2jni/runtime/idl2jni_runtime.cpp:
        * java/idl2jni/runtime/idl2jni_runtime.mpc:
        * java/jms/src/org/opendds/jms/common/util/NativeLoader.java:

          Updated findClass to use the context class loader; JNITHreadAttacher
          also updates the current thread's context class loader on attach.

        * java/idl2jni/runtime/i2jrt/Runtime.java:
        * java/idl2jni/runtime/i2jrt_Runtime.cpp:

          Removed these files.

Thu Dec 11 00:58:14 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * DDS_release_notes.txt:

          Added release note about opendds_ir_ctl changes.

Thu Dec 11 00:46:26 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.mpc:

          Re-added imr_client dependency (required for static builds).

Wed Dec 10 22:57:20 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * DDS_release_notes.txt:

          Added notes for all of the changes merged in from the JMS_PROVIDER
          branch last Friday.

        * tests/DCPS/PersistentDurability/run_test.pl:

          Updated for -DCPSPersistentDurabilityDir option.

Wed Dec 10 15:09:39 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/INSTALL:

          Marked Mac OS X as an experimental platform.

Wed Dec 10 15:04:58 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/idl2jni/codegen/im_jni.cpp:
        * java/jms/src/org/opendds/jms/TopicImpl.java:
        * java/jms/src/org/opendds/jms/qos/DataReaderQosPolicy.java:
        * java/jms/src/org/opendds/jms/qos/DataWriterQosPolicy.java:
        * java/jms/src/org/opendds/jms/qos/ParticipantQosPolicy.java:
        * java/jms/src/org/opendds/jms/qos/PublisherQosPolicy.java: